# typsite

./: Cargo.toml  LICENSE  README-cn.md  README.md  default.nix  flake.nix
.github/workflows/: deploy.yml  release.yml
macro/: Cargo.toml
macro/src/: lib.rs
npins/: sources.json
resources/.typsite/: options.toml
resources/.typsite/assets/: math-block.css  math-inline.css
resources/.typsite/components/: embed.html
resources/.typsite/rewrite/: cite-with-title.html  cite.html  code-block.html  code-inline.html  footnote-def.html
resources/.typsite/schemas/: backlink.html  page.html
resources/root/: article.typ  components-example.typ  example.typ  index.typ  lib.typ  migrate-to-116.typ  page-example.typ  typst.typ  util.typ
resources/root/en/: article.typ  example.typ  index.typ  migrate-to-116.typ  typst.typ
resources/root/lib/: html.typ  lib.typ  rule.typ  site.typ
src/: cli.rs  main.rs  util.rs
src/compile/: compiler.rs  error.rs  mod.rs  options.rs  registry.rs  watch.rs
src/compile/cache/: article.rs  dep.rs  monitor.rs
src/compile/compiler/: analysis.rs  html_pass.rs  initializer.rs  output_sync.rs  page_composer.rs  typst_pass.rs
src/config/: anchor.rs  embed.rs  footer.rs  heading_numbering.rs  highlight.rs  mod.rs  resources.rs  rewrite.rs  schema.rs  section.rs  sidebar.rs  theme.rs
src/ir/: article.rs  embed.rs  metadata.rs  mod.rs  pending.rs  rewriter.rs
src/pass/: error.rs  mod.rs  pending.rs  pure.rs  rewrite.rs  schema.rs  tokenizer.rs
src/resource/: mod.rs  package.rs
src/util/: error.rs  fs.rs  html.rs  path.rs  str.rs
(+26 files in other folders)
