[workspace]
members = ["macro", "."]
resolver = "2"



[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[lints.clippy]
too-many-arguments = "allow"
type-complexity = "allow"

[package]
name = "typsite"
version = "0.1.3"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["std","derive"] }
syntect = { version = "5.2.0", features = ["plist-load"]}
html5gum = { version = "0.7.0"}
typsite_macros = { path = "./macro" }
ctor = "0.4.0"
aho-corasick = "1.1.3"
include_dir = "0.7.4"
anyhow = "1.0.96"
thiserror = "2.0.11"
serde = { version = "*", default-features = false, features = ["derive"] }
rayon = "1.10.0"
blake3 = { version = "1.6.0", features = ["rayon"] }
memmap2 = "0.9.5"
glob = "0.3.2"
serde_json = "1.0.139"
tiny_http = "0.12.0"
tokio = { version = "1", features = ["full","tracing"] }
toml = "*"
tracing = "*"


